+ subtitle history time round 3 decimals + words viewer scroll fix + backspace now remove last subtitle + s now add silence + changed a3dhoubillah ... name + fixed verse number (it was relative of the selected range) + does not show verse number anymore when it is a silence, a basmala or a3dhou + added "silence" when it is a silence that is added + scrollbar style on subtitles history

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,27 @@
   direction: rtl;
   font-family: "Hafs", "Courier New", Courier, monospace;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 16px;
+  height: 16px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 100vh;
+  background: gray;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #2f3234;
+  border-radius: 100vh;
+  border: 3px solid #272a2d;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #464849;
+}
